# cloudflare-r2-directory-listing-worker

./: Cargo.toml  README.md  wrangler.toml
.github/: .env
.github/workflows/: deploy.yml
src/: lib.rs
