[package]
name = "cloudflare-r2-directory-listing-worker"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["Jakub Wieczorek <jakubw@jakubw.eu>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
futures-util = "0.3"
humansize = "2"
itertools = "0.11"
json_dotpath = "1"
markup = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"
worker = "0.0.18"
